--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <h2>Tic Tac Toe</h2>
     <div class="container">
-      <div class="play-again">
+      <div class="msgContainer hide">
+        <h3 class="winMsg"></h3>
         <button class="play-again-button">Play Again</button>
       </div>
       <div class="boxes">
@@ -24,8 +25,9 @@
         <button class="box"></button>
       </div>
       <div class="reset">
-        <button class="reset-button">Reset</button>
+        <button class="reset-button">Reset Game</button>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
